# uesh-kilo-immortal-v5

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  INSTRUCTIONS.md  README_KILO.md  deploy_akash.py
.kilocode/: mcp.json
contracts/: Treasury.sol
src/: arbitrage.rs  main.rs  red_mev.rs  rpc_rotator.rs
src/hunter/: scanner.rs
src/scanner/: analysis.rs
src/treasury/: guard.rs
